overflow fix, border radius variable

--- a/src/components/Catalog/Catalog.scss
+++ b/src/components/Catalog/Catalog.scss
@@ -16,9 +16,10 @@
 
 .catalog {
   display: grid;
-  grid-template-columns: 1fr 9fr;
+  grid-template-columns: 200px 1fr;
 
   border: 1px solid $c-border;
+  border-radius: $containerBorderRadius;
   box-shadow: 0px 4px 4px $c-gray400;
 
   @include mediaMaxWidth($mobileWidth) {
