--- a/src/components/Recommended/Recommended.scss
+++ b/src/components/Recommended/Recommended.scss
@@ -30,7 +30,7 @@
     justify-content: center;
 
     border: 1px solid $c-border;
-    border-radius: 8px;
+    border-radius: $containerBorderRadius;
     box-shadow: 0px 4px 4px $c-gray400;
   }
 }
